environments/prod/auth/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-auth
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nginx-auth
  namespace: ns-auth
  labels:
    app: nginx-auth
spec:
  replicas: 5
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: nginx-auth
  template:
    metadata:
      labels:
        app: nginx-auth
    spec:
      containers:
      - name: nginx-auth
        image: reddddddddd/hfte-auth:6
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8004
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
  strategy:
    canary:
      canaryService: nginx-auth
      steps:
      - setWeight: 20
      - pause: {}
      - setWeight: 40
      - pause: {duration: 10}
      - setWeight: 60
      - pause: {duration: 10}
      - setWeight: 80
      - pause: {duration: 10}

---
kind: Service
apiVersion: v1
metadata:
  name: nginx-auth
  namespace: ns-auth
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 8004
  selector:
    app: nginx-auth
